phist-1.9.3
  - resolve pthreads dependency via gtest (assume pthreads available if OpenMP is) 
  - fix compiling with ghost but without MPI  

phist-1.9.2
  - fix some issues with Tpetra from Trilinos 13 (API change)
  - fix problem with Fortran interface and Tpetra

phist-1.9.1
  - builtin kernels: minor fix for gfortran 10
  - we do not bring our own pytest anymore
  - bugfix: timing was broken if neither MPI nor OpenMP were available
  
phist-1.9.0     update tpetra local/global index types to int/long long because the spack trilinos package offers to instantiate those variants
phist-1.8.0     bug fixes and added missing functions in the Python interface.
phist-1.7.5     patches for compiling on non-x86 architectures
phist.1.7.4     phist-1.7.4 has some new kernels and fixes to the Python interface so it can function as a backend PyNCT.
phist-1.7.4     fixes for xSDK 0.4.0 (dec'18) release, new cmake option PHIST_HOST_OPTIMIZE
phist-1.7.3     xSDK 0.4.0 release candidate (fall 2018)
phist-1.7.2     phist-1.7.2 is a between-releases version for the xSDK 0.4.0 (fall 2018) release
    Also has some improved xSDK compatibility like allowing to turn off host-specific optimizations via a CMake flag.

phist-1.6.1
    - performance fix for ghost
    - bug fixes to BiCGStab as a correction solver
    - fixes to high precision stuff
    - avoid reallocating temporary vectors in refactored jadaOp

phist-1.6.0
    - imporoved support for preconditioning,
    - a refactored jadaOp,
    - GPU support via ghost and tpetra
    - our own ortho manager for Anasazi and Belos

phist-1.5.2
    - development version (before refactoring of jadaOp)

phist-1.4.3
    - fix compilation with petsc+complex

phist-1.4.2     
    - various bug fixes concerning finding blas/lapack libs (in particular MKL and in combination with the spack package manager)

phist-1.4.1
    - minor bug fixes reg. cmake and hanging ghost tests

phist-1.4.0
    - updated Tpetra interface